<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go Disciple</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="e_">"E: "</string>
    <string name="t_">"T: "</string>
    <string name="_">", "</string>
    <string name="disciples">List of Disciples</string>
    <string name="add_new">Add New</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="_123_456_7890">123-456-7890</string>
    <string name="email_address_com">email@address.com</string>
    <string name="_19">19</string>
    <string name="filter_disciples">Filter Disciples</string>
    <string name="add_new_disciple">Add New Disciple</string>

</resources>
