<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:paddingBottom="10dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="10dp"
        android:text="@string/disciples"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_disciples"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/firstFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sortTable"
            android:text="@string/first_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/lastFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sortTable"
            android:text="@string/last_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ageFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sortTable"
            android:text="@string/age"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:dividerHeight="1dp" >
    </ListView>

</LinearLayout>